添加背包点击事件与izzel指令

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ description: Custom Anvil Recipe Refactor
 commands:
   anvil:
     description: Open custom anvil recipe menu.
+  izzel:
+    description: IzzelAliz!
